--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    @apply bg-black text-slate-100;
+    @apply bg-neutral-900 text-neutral-100;
 
     @apply overscroll-none;
 
